AIOEC-2106 #Comment Fixed overlapping buttons.

--- a/public/themes-ai1ec/vortex/less/calendar.less
+++ b/public/themes-ai1ec/vortex/less/calendar.less
@@ -20,6 +20,7 @@
 #ai1ec-calendar-view-container {
 	position: relative;
 	-webkit-transform: translateZ(0);
+	z-index: 1;
 }
 #ai1ec-calendar-view .post-edit-link {
 	white-space: nowrap;
